--- a/src/css/homecontainer.css
+++ b/src/css/homecontainer.css
@@ -8,8 +8,11 @@
 
 .Homeadds{
     flex: 2;
-    background-color: aqua;
+    background-color: rgb(218, 246, 246);
     border-radius: 20px;
+    text-align: center;
+    color:rgb(255, 255, 255);
+    text-shadow: 3px 3px 30px rgb(0, 0, 0);
 }
 
 @media  (max-width:1000px) {
