--- a/src/css/post.css
+++ b/src/css/post.css
@@ -1,9 +1,10 @@
 .Containerpost{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     font-size: 20px;
-    background-color: rgb(215, 225, 240);
+    background-color: rgb(255, 255, 255);
     border-radius: 20px;
     padding: 10px;
+    margin: 10px;
 }
 .Containerpost > h3{
     text-align: center;
